# project-

./: HACKATHON_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md
project/: README.md  app.py  auto_demo.py  complete_demo.py  demo.py  demo_output.txt  detailed_test.py  mock_demo.py  ollama_integration.py  pyproject.toml  results.txt  simple_test.py  veritas_audit.db  veritas_chat.py  veritas_demo.py  veritas_persistence.py
project/src/project/: crew.py  main.py  trust_scorer.py
project/src/project/config/: agents.yaml  tasks.yaml
project/templates/: veritas.html
